--- a/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
@@ -22,7 +22,7 @@
         <h1>ComatSystemProjectile</h1>
         <h2>Dependencies</h2>
         <p>
-            <p><b style="text-decoration: underline;">Required</b> Components: <a class="redirect-link" href="../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
+            <p><b style="text-decoration: underline;">Required</b> Components: <a class="redirect-link" href="../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">Rigidbody2D</a></p>
         </p>
         <br>
         <h2>Description</h2>
@@ -34,19 +34,19 @@
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
-                    <td class="label"><a class="properties" href="#">InitialVelocity</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/initial-velocity.html">InitialVelocity</a></td>
                     <td class="description">The initial velocity of the projectile when it's launched.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">DamageLayers</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/damage-layers.html">DamageLayers</a></td>
                     <td class="description">Indicates which layers can be damaged.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">DamageAmount</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/damage-amount.html">DamageAmount</a></td>
                     <td class="description">Indicates the amount of damage the projectile will deal upon collision with a damageable object.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">HitboxShape</a></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/hitbox-shape.html">HitboxShape</a></td>
                     <td class="description">Indicates the shape of the projectile's hitbox. It can be a cirle or a box.</td>
                 </tr>
             </table>
@@ -56,15 +56,15 @@
             <span class="table-title">Public Methods</span>
             <table>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">DealDamageOnContact</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/deal-damage-on-contact.html">DealDamageOnContact</a></td>
                     <td class="description">Deals damage to the first collider that enters the specified hit box.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">ContinuousAreaOfEffectDamage</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/continuous-area-of-effect-damage.html">ContinuousAreaOfEffectDamage</a></td>
                     <td class="description">Deals damage instantly to any new colliders that enter the specified hitbox and then deals damage again, to all targets, every 'x' amount of seconds.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="#">Explode</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/explode-on-contact.html">ExplodeOnContact</a></td>
                     <td class="description">Deals damage to all colliders inside the specified hitbox and then destroys the projectile.</td>
                 </tr>
                 </table>
