--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-charge-attack-fully-charged.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-charge-attack-fully-charged.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OnInitiateChargeAttack</title>
+    <title>OnChargeAttackFullyCharged</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,9 +19,9 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.OnInitiateChargeAttack</h1>
+        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.OnChargeAttackFullyCharged</h1>
         <h2>Declaration</h2>
-        <p>public event EventHandler&lt;<b>CurrentAttackEventArgs</b>&gt; <b>OnInitiateChargeAttack</b>;</p>
+        <p>public event EventHandler&lt;<b>CurrentAttackEventArgs</b>&gt; <b>OnChargeAttackFullyCharged</b>;</p>
         <br>
         <div class="table-division">
             <span class="table-title">Event Arguments</span>
@@ -35,12 +35,11 @@
         <br>
         <h2>Description</h2>
         <p>
-            Triggered when the character starts charging an attack.
+            Triggered when a charge attack is fully charged.
             <br> <br>
             When the assigned attack key is pressed, triggering the execution of the <a class="redirect-link" href="../PUBLIC-METHODS/perform-charge-attack.html">PerformChargeAttack</a>
-            function, this event is activated. Utilizing the <b>attackData</b> event argument received from the event, it becomes possible to implement various actions such as spawning particles.
-            In order to code a UI cooldown for charged attacks, subscribing to the <a class="redirect-link" href="on-release-charge-attack.html">OnReleaseChargeAttack</a> event instead,
-            is the correct option.
+            function, this event will be triggered once the function completes charging the attack. Utilizing the <b>attackData</b> event argument received from the event,
+            it becomes possible to implement various actions such as spawning particles.
         </p>
         <br>
         <p>
@@ -65,7 +64,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Start.html">Start</a>()
     {
-        characterCombat.<b>OnInitiateChargeAttack</b> += Combat_OnInitiateChargeAttack;
+        characterCombat.<b>OnChargeAttackFullyCharged</b> += Combat_OnChargeAttackFullyCharged;
     }
 
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
@@ -74,21 +73,19 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         {
             characterCombat.<a class="redirect-link" href="../PUBLIC-METHODS/perform-charged-attack.html">PerformChargedAttack</a>(exampleAttack);
         }
-        else if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyUp.html">Input.GetKeyUp(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>)</a>)
+        else if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyUp.html">Input.GetKeyUp</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.X</a>))
         {
             characterCombat.<a class="redirect-link" href="../PUBLIC-METHODS/try-release-charge-attack.html">TryReleaseChargeAttack</a>();
         }
     }
 
-    private void Combat_OnInitiateChargeAttack(object sender, <a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.CurrentAttackEventArgs e)
+    private void Combat_OnChargeAttackFullyCharged(object sender, <a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.CurrentAttackEventArgs e)
     {
         if (e.attackData == exampleAttack)
         {
-            float chargeTime = e.attackData.ChargeTime;
-            float holdTime = e.attackData.HoldChargeTime;
             string attackName = e.attackData.AttackName;
 
-            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The attack: " + attackName + ", needs " + chargeTime + "s to be fully charged and can be held for " + holdTime + "s.");
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The attack: " + attackName + ", is fully charged.");
         }
     }
 }
