--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-initiate-normal-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-initiate-normal-attack.html
@@ -21,25 +21,70 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.OnInitiateNormalAttack</h1>
         <h2>Declaration</h2>
-        <p>public event EventHandler <b>OnInitiateNormalAttack</b>;</p>
+        <p>public event EventHandler&lt;<b>CurrentAttackEventArgs</b>&gt; <b>OnInitiateNormalAttack</b>;</p>
+        <br>
+        <div class="table-division">
+            <span class="table-title">Event Arguments</span>
+            <table>
+                <tr>
+                    <td class="label"><b>attackData</b></td>
+                    <td class="description">The ongoing attack's current data.</td>
+                </tr>
+            </table>
+        </div>
         <br>
         <h2>Description</h2>
         <p>
             Triggered when the character initiates a normal attack.
             <br> <br>
-            Description goes here.
+            When the assigned attack key is pressed, triggering the execution of the <a class="redirect-link" href="../PUBLIC-METHODS/perform-normal-attack.html">PerformNormalAttack</a>
+            function, this event is activated. Utilizing the <b>attackData</b> event argument received from the event, it becomes possible to code UI cooldowns for the attack and/or implement
+            various actions such as spawning particles.
         </p>
         <br>
         <p>
-            Example paragraph goes here.
+            Here is an example of how you can listen to the event. You need a reference to the attack (<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a>) that will be
+            initiated and then you can compare it with the <b>attackData</b> received by the event to distinguish it from other attacks.
         </p>
 
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">Monobehaviour</a> 
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>))]
+public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
 {
-    // Code
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> exampleAttack;
+    
+    private <a class="redirect-link" href="../character-combat.html">CharacterCombat</a> characterCombat;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        characterCombat = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&lt;<a class="redirect-link" href="../character-combat.html">CharacterCombat</a>&gt;();
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Start.html">Start</a>()
+    {
+        characterCombat.<b>OnInitiateNormalAttack</b> += Combat_OnInitiateNormalAttack;
+    }
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.html">KeyCode.Z</a>)</a>)
+        {
+            characterCombat.<a class="redirect-link" href="../PUBLIC-METHODS/perform-normal-attack.html">PerformNormalAttack</a>(exampleAttack);
+        }
+    }
+
+    private void Combat_OnInitiateNormalAttack(object sender, <a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.CurrentAttackEventArgs e)
+    {
+        if (e.attackData == exampleAttack)
+        {
+            float attackCooldown = e.attackData.Cooldown;
+            string attackName = e.attackData.AttackName;
+
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("The attack: " + attackName + ", will be off cooldown in " + attackCooldown + " seconds.");
+        }
+    }
 }
 </pre>
 </div>
