--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-release-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/EVENTS/on-release-charge-attack.html
@@ -21,7 +21,17 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.OnReleaseChargeAttack</h1>
         <h2>Declaration</h2>
-        <p>public event EventHandler <b>OnReleaseChargeAttack</b>;</p>
+        <p>public event EventHandler&lt;<b>CurrentAttackEventArgs</b>&gt; <b>OnReleaseChargeAttack</b>;</p>
+        <br>
+        <div class="table-division">
+            <span class="table-title">Event Arguments</span>
+            <table>
+                <tr>
+                    <td class="label"><b>attackData</b></td>
+                    <td class="description">The ongoing attack's current data.</td>
+                </tr>
+            </table>
+        </div>
         <br>
         <h2>Description</h2>
         <p>
@@ -37,7 +47,7 @@
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">Monobehaviour</a> 
+public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a> 
 {
     // Code
 }
