--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/cancel-charge-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/cancel-charge-attack.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PerformChargedAttack</title>
+    <title>CancelChargeAttack</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,9 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.PerformChargedAttack</h1>
+        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.CancelChargeAttack</h1>
         <h2>Declaration</h2>
-        <p>public void <b>PerformChargedAttack</b>(AttackSO <b>attackData</b>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> <b>projectileSpawnPoint</b> = null);</p>
+        <p>public void <b>CancelChargeAttack</b>(<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> <b>attackData</b>);</p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
@@ -28,10 +28,6 @@
                 <tr>
                     <td class="label"><b>attackData</b></td>
                     <td class="description">The scriptable object (AttackSO) that holds the data of the attack.</td>
-                </tr>
-                <tr>
-                    <td class="label"><b>projectileSpawnPoint</b></td>
-                    <td class="description">If the attack throws a projectile, a transform reference is needed.</td>
                 </tr>
             </table>
         </div>
