--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-normal-attack.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-COMBAT/PUBLIC-METHODS/perform-normal-attack.html
@@ -20,7 +20,7 @@
     <div class="main-page-division">
         <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.PerformNormalAttack</h1>
         <h2>Declaration</h2>
-        <p>public void <b>PerformNormalAttack</b>(AttackSO <b>attackData</b>, bool <b>isPartOfCombo</b> = false, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> <b>projectileSpawnPoint</b> = null);</p>
+        <p>public void <b>PerformNormalAttack</b>(<a class="redirect-link" href="../../ATTACK-SO/attack-so.html">AttackSO</a> <b>attackData</b>, bool <b>isPartOfCombo</b> = false, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Transform.html">Transform</a> <b>projectileSpawnPoint</b> = null);</p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
