--- a/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/PUBLIC-METHODS/deal-damage-on-contact.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/PUBLIC-METHODS/deal-damage-on-contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CancelChargedAttack</title>
+    <title>DealDamageOnContact</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,19 +18,9 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.CancelChargedAttack</h1>
+        <h1><a class="redirect-link" href="../combat-system-projectile.html">CombatSystemProjectile</a>.DealDamageOnContact</h1>
         <h2>Declaration</h2>
-        <p>public void <b>CancelChargedAttack</b>(AttackSO <b>attackData</b>);</p>
-        <br>
-        <div class="table-division">
-            <span class="table-title">Parameters</span>
-            <table>
-                <tr>
-                    <td class="label"><b>attackData</b></td>
-                    <td class="description">The scriptable object (AttackSO) that holds the data of the attack.</td>
-                </tr>
-            </table>
-        </div>
+        <p>public void <b>DealDamageOnContact</b>();</p>
         <br>
         <h2>Description</h2>
         <p>
