--- a/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/PUBLIC-METHODS/explode-on-contact.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/PUBLIC-METHODS/explode-on-contact.html
@@ -3,40 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OnCancelChargeAttack</title>
+    <title>ExplodeOnContact</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../../../CSS/navigation-bar.css">
+    <link rel="stylesheet" href="../../../../../CSS/scroll-bar.css">
     <link rel="stylesheet" href="../../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../../CSS/code-block.css">
-    <link rel="stylesheet" href="../../../../../CSS/scroll-bar.css">
 </head>
 <body>
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1><a class="redirect-link" href="../character-combat.html">CharacterCombat</a>.OnCancelChargeAttack</h1>
+        <h1><a class="redirect-link" href="../combat-system-projectile.html">CombatSystemProjectile</a>.ExplodeOnContact</h1>
         <h2>Declaration</h2>
-        <p>public event EventHandler&lt;<b>CurrentAttackEventArgs</b>&gt; <b>OnCancelChargeAttack</b>;</p>
-        <br>
-        <div class="table-division">
-            <span class="table-title">Event Arguments</span>
-            <table>
-                <tr>
-                    <td class="label"><b>attackData</b></td>
-                    <td class="description">The ongoing attack's current data.</td>
-                </tr>
-            </table>
-        </div>
+        <p>public void <b>ExplodeOnContact</b>();</p>
         <br>
         <h2>Description</h2>
         <p>
-            Triggered when a charged attack is cancelled.
-            <br> <br>
             Description goes here.
         </p>
         <br>
@@ -47,9 +34,9 @@
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a> 
+public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">MonoBehaviour</a>
 {
-    // Code
+    // Code.
 }
 </pre>
 </div>
