Tasks from TODO list

--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-dashing.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-dashing.html
@@ -28,7 +28,7 @@
             <br> <br>
             When the designated key for dashing is pressed, the controller will endeavor to make your character dash. You have control over when the dash is initiated
             through the '<b>dashCooldown</b>' and '<b>minimumDashDistance</b>' properties in the inspector of the controller. Tweak these properties to tailor the dash
-            experience to your preferences. For a deeper level of customization, dive into the settings of the '<a class="redirect-link" href="#">CharacterDash</a>'
+            experience to your preferences. For a deeper level of customization, dive into the settings of the '<a class="redirect-link" href="../../CHARACTER-DASH/character-dash.html">CharacterDash</a>'
             component to fine-tune the intricacies of the dash mechanic.
             <br> <br>
             Here is a basic example on how you can implement the dash mechanic into your custom controller script:
