--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
@@ -44,7 +44,7 @@
             </li>
             <br>
             <li>
-                Additionally, contingent on the settings of the '<a class="redirect-link" href="#">CharacterSlide</a>' component, the character may experience a reduction
+                Additionally, contingent on the settings of the '<a class="redirect-link" href="../../CHARACTER-SLIDE/character-slide.html">CharacterSlide</a>' component, the character may experience a reduction
                 in speed during the floor slide. In such instances, if the character's speed drops below the specified value, the floor slide will automatically halt.
             </li>
             <br>
