--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -23,7 +23,7 @@
         <h2>Dependencies</h2>
         <p>
             <p><b style="text-decoration: underline;">Required</b> Components: <a class="redirect-link" href="../CHARACTER-MOVEMENT/character-movement.html">CharacterMovement</a>, <a class="redirect-link" href="../ENV-QUERY/env-quey.html">CharacterEnvironmentalQuery</a>, <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a></p>
-            <p><span>Optional</span> Components: <a class="redirect-link" href="../CHARACTER-SLIDE/character-slide.html">CharacterSlide</a>, <a class="redirect-link" href="../CHARACTER-DASH/character-dash.html">CharacterDash</a>, <a class="redirect-link" href="../CHARACTER-LEDGE-GRAB/character-ledge-grab.html">CharacterLedgeGrab</a>, <a class="redirect-link" href="#">CharacterCombat</a></p>
+            <p><span>Optional</span> Components: <a class="redirect-link" href="../CHARACTER-SLIDE/character-slide.html">CharacterSlide</a>, <a class="redirect-link" href="../CHARACTER-DASH/character-dash.html">CharacterDash</a>, <a class="redirect-link" href="../CHARACTER-LEDGE-GRAB/character-ledge-grab.html">CharacterLedgeGrab</a>, <a class="redirect-link" href="../CHARACTER-COMBAT/character-combat.html">CharacterCombat</a></p>
         </p>
         <br>
         <h2>Description</h2>
@@ -75,15 +75,15 @@
             <span class="table-title">Protected Properties</span>
             <table>
                 <tr>
-                    <td class="label"><a class="properties" href="#">characterRb</a></td>
+                    <td class="label"><a class="properties" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">characterRb</a></td>
                     <td class="description">The '<a class="properties" href="https://docs.unity3d.com/ScriptReference/Rigidbody2D.html">Rigidbody2D</a>' component attached to the character</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">combatSystem</a></td>
-                    <td class="description">Reference to the '<a class="redirect-link" href="#">CombatSystem</a>' component</td>
+                    <td class="label"><a class="properties" href="../CHARACTER-COMBAT/character-combat.html">characterCombat</a></td>
+                    <td class="description">Reference to the '<a class="redirect-link" href="../CHARACTER-COMBAT/character-combat.html">CharacterCombat</a>' component</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="properties" href="#">activeCollider</a></td>
+                    <td class="label"><a class="properties" href="../ENV-QUERY/PUBLIC-METHODS/set-active-collider.html">activeCollider</a></td>
                     <td class="description">Reference to the active '<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Collider2D.html">Collider2D</a>' of the character</td>
                 </tr>
             </table>
