--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
@@ -40,7 +40,7 @@
             character will be able to grab it. You have the option to initiate a grab either automatically, by calling '<b>LedgeGrab();</b>' without passing any parameters, or
             by specifying a custom condition, such as a key press by the player. In the inspector of the controller, you can specify the maximum time that the character is able to
             hold a ledge, before being forced to cancel it, by configuring the '<b>maxLedgeGrabTime</b>' value.  Further customization of the ledge grab mechanic can be achieved
-            by fine-tuning the settings of the '<a class="redirect-link" href="#">CharacterLedgeGrab</a>' component.
+            by fine-tuning the settings of the '<a class="redirect-link" href="../../CHARACTER-LEDGE-GRAB/character-ledge-grab.html">CharacterLedgeGrab</a>' component.
             <br> <br>
             This example incorporates the ledge grab mechanic, specifying that the player must run toward a wall for it to be activated:
         </p>
