--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/wall-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/wall-slide.html
@@ -40,7 +40,7 @@
         <p>
             When your character is positioned on a wall, its ability to slide is determined by the conditions specified in the function. If the function
             is called without parameters, the character will automatically initiate a slide on that wall. The speed at which your character accelerates
-            during the slide can be controlled by configuring the settings of the '<a class="redirect-link" href="#">CharacterSlide</a>' component.
+            during the slide can be controlled by configuring the settings of the '<a class="redirect-link" href="../../CHARACTER-SLIDE/character-slide.html">CharacterSlide</a>' component.
             <br> <br>
             In this example, the player needs to maintain a continuous run toward the wall for the function to be executed:
         </p>
